argocd/aws/666628074417/clusters/cbioportal-prod/apps/cbioagent/cbioagent-dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cbioagent-dashboard
  labels:
    run: cbioagent-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      run: cbioagent-dashboard
  template:
    metadata:
      labels:
        run: cbioagent-dashboard
    spec:
      containers:
        - name: cbioagent-dashboard
          image: cbioportal/librechat:dashboard-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
      nodeSelector:
        workload: "cbioagent"
      tolerations:
        - key: "workload"
          operator: "Equal"
          value: "cbioagent"
          effect: "NoSchedule"
---
apiVersion: v1
kind: Service
metadata:
  name: cbioagent-dashboard
spec:
  selector:
    run: cbioagent-dashboard
  ports:
    - port: 3000
      name: http
      targetPort: 3000
  type: ClusterIP
